feat: enhance LLM client with system prompt support and vLLM integration, and refine SQL generator prompting.

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ bitsandbytes
 fastapi
 uvicorn
 sse-starlette
+
+# Optional: vLLM for high-performance inference (Linux/NVIDIA recommended)
+# vllm
